NewVer/TKIK-projekt-new/CssGramatykaParser.py
# Generated from CssGramatyka.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CssGramatykaParser ( Parser ):

    grammarFileName = "CssGramatyka.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'static'", "'char'", "'int'", "'float'", 
                     "'long'", "'double'", "'void'", "'using'", "'if'", 
                     "'else'", "'for'", "'while'", "'do'", "'return'", "'class'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'='", "'+='", "'-='", "'*='", "'/='", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'=='", "'!='", 
                     "'<'", "'<='", "'>'", "'>='", "'('", "')'", "'['", 
                     "']'", "'{'", "'}'", "'&&'", "'||'", "'!'", "';'" ]

    symbolicNames = [ "<INVALID>", "Static", "Char", "Int", "Float", "Long", 
                      "Double", "Void", "Using", "If", "Else", "For", "While", 
                      "Do", "Return", "Class", "Identifier", "CharLiteral", 
                      "StringLiteral", "IntLiteral", "FloatLiteral", "Assign", 
                      "AssignAdd", "AssignSubtract", "AssignMultiply", "AssignDivide", 
                      "Add", "Subtract", "Multiply", "Divide", "Modulo", 
                      "Equal", "NotEqual", "Less", "LessOrEqual", "Greater", 
                      "GreaterOrEqual", "LeftRound", "RightRound", "LeftSquare", 
                      "RightSquare", "LeftCurly", "RightCurly", "And", "Or", 
                      "Not", "Semicolon", "Whitespace", "Comment", "Substract" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_usingStatement = 2
    RULE_variableDecDef = 3
    RULE_functionDecDef = 4
    RULE_classDecDef = 5
    RULE_statement = 6
    RULE_expression = 7
    RULE_assignOperator = 8
    RULE_value = 9
    RULE_type_ = 10

    ruleNames =  [ "program", "declaration", "usingStatement", "variableDecDef", 
                   "functionDecDef", "classDecDef", "statement", "expression", 
                   "assignOperator", "value", "type_" ]

    EOF = Token.EOF
    Static=1
    Char=2
    Int=3
    Float=4
    Long=5
    Double=6
    Void=7
    Using=8
    If=9
    Else=10
    For=11
    While=12
    Do=13
    Return=14
    Class=15
    Identifier=16
    CharLiteral=17
    StringLiteral=18
    IntLiteral=19
    FloatLiteral=20
    Assign=21
    AssignAdd=22
    AssignSubtract=23
    AssignMultiply=24
    AssignDivide=25
    Add=26
    Subtract=27
    Multiply=28
    Divide=29
    Modulo=30
    Equal=31
    NotEqual=32
    Less=33
    LessOrEqual=34
    Greater=35
    GreaterOrEqual=36
    LeftRound=37
    RightRound=38
    LeftSquare=39
    RightSquare=40
    LeftCurly=41
    RightCurly=42
    And=43
    Or=44
    Not=45
    Semicolon=46
    Whitespace=47
    Comment=48
    Substract=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CssGramatykaParser.EOF, 0)

        def usingStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CssGramatykaParser.UsingStatementContext)
            else:
                return self.getTypedRuleContext(CssGramatykaParser.UsingStatementContext,i)


        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CssGramatykaParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(CssGramatykaParser.DeclarationContext,i)


        def getRuleIndex(self):
            return CssGramatykaParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = CssGramatykaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 98814) != 0):
                self.state = 24
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [8]:
                    self.state = 22
                    self.usingStatement()
                    pass
                elif token in [1, 2, 3, 4, 5, 6, 7, 15, 16]:
                    self.state = 23
                    self.declaration()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 28
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 29
            self.match(CssGramatykaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDecDef(self):
            return self.getTypedRuleContext(CssGramatykaParser.FunctionDecDefContext,0)


        def classDecDef(self):
            return self.getTypedRuleContext(CssGramatykaParser.ClassDecDefContext,0)


        def variableDecDef(self):
            return self.getTypedRuleContext(CssGramatykaParser.VariableDecDefContext,0)


        def getRuleIndex(self):
            return CssGramatykaParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = CssGramatykaParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 34
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 31
                self.functionDecDef()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 32
                self.classDecDef()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 33
                self.variableDecDef()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UsingStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Using(self):
            return self.getToken(CssGramatykaParser.Using, 0)

        def Identifier(self):
            return self.getToken(CssGramatykaParser.Identifier, 0)

        def Semicolon(self):
            return self.getToken(CssGramatykaParser.Semicolon, 0)

        def getRuleIndex(self):
            return CssGramatykaParser.RULE_usingStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUsingStatement" ):
                listener.enterUsingStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUsingStatement" ):
                listener.exitUsingStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUsingStatement" ):
                return visitor.visitUsingStatement(self)
            else:
                return visitor.visitChildren(self)




    def usingStatement(self):

        localctx = CssGramatykaParser.UsingStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_usingStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(CssGramatykaParser.Using)
            self.state = 37
            self.match(CssGramatykaParser.Identifier)
            self.state = 38
            self.match(CssGramatykaParser.Semicolon)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDecDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(CssGramatykaParser.Type_Context,0)


        def Identifier(self):
            return self.getToken(CssGramatykaParser.Identifier, 0)

        def Semicolon(self):
            return self.getToken(CssGramatykaParser.Semicolon, 0)

        def assignOperator(self):
            return self.getTypedRuleContext(CssGramatykaParser.AssignOperatorContext,0)


        def expression(self):
            return self.getTypedRuleContext(CssGramatykaParser.ExpressionContext,0)


        def getRuleIndex(self):
            return CssGramatykaParser.RULE_variableDecDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDecDef" ):
                listener.enterVariableDecDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDecDef" ):
                listener.exitVariableDecDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDecDef" ):
                return visitor.visitVariableDecDef(self)
            else:
                return visitor.visitChildren(self)




    def variableDecDef(self):

        localctx = CssGramatykaParser.VariableDecDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variableDecDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.type_(0)
            self.state = 41
            self.match(CssGramatykaParser.Identifier)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 65011712) != 0):
                self.state = 42
                self.assignOperator()
                self.state = 43
                self.expression(0)


            self.state = 47
            self.match(CssGramatykaParser.Semicolon)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDecDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CssGramatykaParser.Type_Context)
            else:
                return self.getTypedRuleContext(CssGramatykaParser.Type_Context,i)


        def Identifier(self, i:int=None):    
            if i is None:
                return self.getTokens(CssGramatykaParser.Identifier)
            else:
                return self.getToken(CssGramatykaParser.Identifier, 0)    # i

        def LeftRound(self):
            return self.getToken(CssGramatykaParser.LeftRound, 0)

        def RightRound(self):
            return self.getToken(CssGramatykaParser.RightRound, 0)

        def Semicolon(self):
            return self.getToken(CssGramatykaParser.Semicolon, 0)

        def statement(self):
            return self.getTypedRuleContext(CssGramatykaParser.StatementContext,0)


        def Static(self):
            return self.getToken(CssGramatykaParser.Static, 0)

        def getRuleIndex(self):
            return CssGramatykaParser.RULE_functionDecDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDecDef" ):
                listener.enterFunctionDecDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDecDef" ):
                listener.exitFunctionDecDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDecDef" ):
                return visitor.visitFunctionDecDef(self)
            else:
                return visitor.visitChildren(self)




    def functionDecDef(self):

        localctx = CssGramatykaParser.FunctionDecDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_functionDecDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 49
                self.match(CssGramatykaParser.Static)


            self.state = 52
            self.type_(0)
            self.state = 53
            self.match(CssGramatykaParser.Identifier)
            self.state = 54
            self.match(CssGramatykaParser.LeftRound)
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 65788) != 0):
                self.state = 55
                self.type_(0)
                self.state = 56
                self.match(CssGramatykaParser.Identifier)


            self.state = 60
            self.match(CssGramatykaParser.RightRound)
            self.state = 63
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [46]:
                self.state = 61
                self.match(CssGramatykaParser.Semicolon)
                pass
            elif token in [9, 11, 12, 13, 14, 16, 17, 18, 19, 20, 26, 27, 37, 41, 45]:
                self.state = 62
                self.statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDecDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Class(self):
            return self.getToken(CssGramatykaParser.Class, 0)

        def Identifier(self):
            return self.getToken(CssGramatykaParser.Identifier, 0)

        def LeftCurly(self):
            return self.getToken(CssGramatykaParser.LeftCurly, 0)

        def RightCurly(self):
            return self.getToken(CssGramatykaParser.RightCurly, 0)

        def variableDecDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CssGramatykaParser.VariableDecDefContext)
            else:
                return self.getTypedRuleContext(CssGramatykaParser.VariableDecDefContext,i)


        def functionDecDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CssGramatykaParser.FunctionDecDefContext)
            else:
                return self.getTypedRuleContext(CssGramatykaParser.FunctionDecDefContext,i)


        def getRuleIndex(self):
            return CssGramatykaParser.RULE_classDecDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDecDef" ):
                listener.enterClassDecDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDecDef" ):
                listener.exitClassDecDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDecDef" ):
                return visitor.visitClassDecDef(self)
            else:
                return visitor.visitChildren(self)




    def classDecDef(self):

        localctx = CssGramatykaParser.ClassDecDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_classDecDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(CssGramatykaParser.Class)
            self.state = 66
            self.match(CssGramatykaParser.Identifier)
            self.state = 76
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 67
                self.match(CssGramatykaParser.LeftCurly)
                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 65790) != 0):
                    self.state = 70
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                    if la_ == 1:
                        self.state = 68
                        self.variableDecDef()
                        pass

                    elif la_ == 2:
                        self.state = 69
                        self.functionDecDef()
                        pass


                    self.state = 74
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 75
                self.match(CssGramatykaParser.RightCurly)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LeftCurly(self):
            return self.getToken(CssGramatykaParser.LeftCurly, 0)

        def RightCurly(self):
            return self.getToken(CssGramatykaParser.RightCurly, 0)

        def variableDecDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CssGramatykaParser.VariableDecDefContext)
            else:
                return self.getTypedRuleContext(CssGramatykaParser.VariableDecDefContext,i)


        def classDecDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CssGramatykaParser.ClassDecDefContext)
            else:
                return self.getTypedRuleContext(CssGramatykaParser.ClassDecDefContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CssGramatykaParser.StatementContext)
            else:
                return self.getTypedRuleContext(CssGramatykaParser.StatementContext,i)


        def If(self):
            return self.getToken(CssGramatykaParser.If, 0)

        def LeftRound(self):
            return self.getToken(CssGramatykaParser.LeftRound, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CssGramatykaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(CssGramatykaParser.ExpressionContext,i)


        def RightRound(self):
            return self.getToken(CssGramatykaParser.RightRound, 0)

        def Else(self):
            return self.getToken(CssGramatykaParser.Else, 0)

        def While(self):
            return self.getToken(CssGramatykaParser.While, 0)

        def Do(self):
            return self.getToken(CssGramatykaParser.Do, 0)

        def Semicolon(self, i:int=None):
            if i is None:
                return self.getTokens(CssGramatykaParser.Semicolon)
            else:
                return self.getToken(CssGramatykaParser.Semicolon, i)

        def For(self):
            return self.getToken(CssGramatykaParser.For, 0)

        def Return(self):
            return self.getToken(CssGramatykaParser.Return, 0)

        def getRuleIndex(self):
            return CssGramatykaParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = CssGramatykaParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 137
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [41]:
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.match(CssGramatykaParser.LeftCurly)
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 37521037720316) != 0):
                    self.state = 82
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                    if la_ == 1:
                        self.state = 79
                        self.variableDecDef()
                        pass

                    elif la_ == 2:
                        self.state = 80
                        self.classDecDef()
                        pass

                    elif la_ == 3:
                        self.state = 81
                        self.statement()
                        pass


                    self.state = 86
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 87
                self.match(CssGramatykaParser.RightCurly)
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 88
                self.match(CssGramatykaParser.If)
                self.state = 89
                self.match(CssGramatykaParser.LeftRound)
                self.state = 90
                self.expression(0)
                self.state = 91
                self.match(CssGramatykaParser.RightRound)
                self.state = 92
                self.statement()
                self.state = 95
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
                if la_ == 1:
                    self.state = 93
                    self.match(CssGramatykaParser.Else)
                    self.state = 94
                    self.statement()


                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 3)
                self.state = 97
                self.match(CssGramatykaParser.While)
                self.state = 98
                self.match(CssGramatykaParser.LeftRound)
                self.state = 99
                self.expression(0)
                self.state = 100
                self.match(CssGramatykaParser.RightRound)
                self.state = 101
                self.statement()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 4)
                self.state = 103
                self.match(CssGramatykaParser.Do)
                self.state = 104
                self.statement()
                self.state = 105
                self.match(CssGramatykaParser.While)
                self.state = 106
                self.match(CssGramatykaParser.LeftRound)
                self.state = 107
                self.expression(0)
                self.state = 108
                self.match(CssGramatykaParser.RightRound)
                self.state = 109
                self.match(CssGramatykaParser.Semicolon)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 5)
                self.state = 111
                self.match(CssGramatykaParser.For)
                self.state = 112
                self.match(CssGramatykaParser.LeftRound)
                self.state = 118
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
                if la_ == 1:
                    self.state = 114
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if (((_la) & ~0x3f) == 0 and ((1 << _la) & 35322014400512) != 0):
                        self.state = 113
                        self.expression(0)


                    self.state = 116
                    self.match(CssGramatykaParser.Semicolon)
                    pass

                elif la_ == 2:
                    self.state = 117
                    self.variableDecDef()
                    pass


                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 35322014400512) != 0):
                    self.state = 120
                    self.expression(0)


                self.state = 123
                self.match(CssGramatykaParser.Semicolon)
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 35322014400512) != 0):
                    self.state = 124
                    self.expression(0)


                self.state = 127
                self.match(CssGramatykaParser.RightRound)
                self.state = 128
                self.statement()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 6)
                self.state = 129
                self.match(CssGramatykaParser.Return)
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 35322014400512) != 0):
                    self.state = 130
                    self.expression(0)


                self.state = 133
                self.match(CssGramatykaParser.Semicolon)
                pass
            elif token in [16, 17, 18, 19, 20, 26, 27, 37, 45]:
                self.enterOuterAlt(localctx, 7)
                self.state = 134
                self.expression(0)
                self.state = 135
                self.match(CssGramatykaParser.Semicolon)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LeftRound(self):
            return self.getToken(CssGramatykaParser.LeftRound, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CssGramatykaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(CssGramatykaParser.ExpressionContext,i)


        def RightRound(self):
            return self.getToken(CssGramatykaParser.RightRound, 0)

        def Add(self):
            return self.getToken(CssGramatykaParser.Add, 0)

        def Subtract(self):
            return self.getToken(CssGramatykaParser.Subtract, 0)

        def Not(self):
            return self.getToken(CssGramatykaParser.Not, 0)

        def type_(self):
            return self.getTypedRuleContext(CssGramatykaParser.Type_Context,0)


        def value(self):
            return self.getTypedRuleContext(CssGramatykaParser.ValueContext,0)


        def assignOperator(self):
            return self.getTypedRuleContext(CssGramatykaParser.AssignOperatorContext,0)


        def CharLiteral(self):
            return self.getToken(CssGramatykaParser.CharLiteral, 0)

        def StringLiteral(self):
            return self.getToken(CssGramatykaParser.StringLiteral, 0)

        def IntLiteral(self):
            return self.getToken(CssGramatykaParser.IntLiteral, 0)

        def FloatLiteral(self):
            return self.getToken(CssGramatykaParser.FloatLiteral, 0)

        def Substract(self):
            return self.getToken(CssGramatykaParser.Substract, 0)

        def Multiply(self):
            return self.getToken(CssGramatykaParser.Multiply, 0)

        def Divide(self):
            return self.getToken(CssGramatykaParser.Divide, 0)

        def Modulo(self):
            return self.getToken(CssGramatykaParser.Modulo, 0)

        def Less(self):
            return self.getToken(CssGramatykaParser.Less, 0)

        def LessOrEqual(self):
            return self.getToken(CssGramatykaParser.LessOrEqual, 0)

        def Greater(self):
            return self.getToken(CssGramatykaParser.Greater, 0)

        def GreaterOrEqual(self):
            return self.getToken(CssGramatykaParser.GreaterOrEqual, 0)

        def Equal(self):
            return self.getToken(CssGramatykaParser.Equal, 0)

        def NotEqual(self):
            return self.getToken(CssGramatykaParser.NotEqual, 0)

        def And(self):
            return self.getToken(CssGramatykaParser.And, 0)

        def Or(self):
            return self.getToken(CssGramatykaParser.Or, 0)

        def getRuleIndex(self):
            return CssGramatykaParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CssGramatykaParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,20,self._ctx)
            if la_ == 1:
                self.state = 140
                self.match(CssGramatykaParser.LeftRound)
                self.state = 141
                self.expression(0)
                self.state = 142
                self.match(CssGramatykaParser.RightRound)
                pass

            elif la_ == 2:
                self.state = 144
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 35184573415424) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 145
                self.expression(14)
                pass

            elif la_ == 3:
                self.state = 146
                self.match(CssGramatykaParser.LeftRound)
                self.state = 147
                self.type_(0)
                self.state = 148
                self.match(CssGramatykaParser.RightRound)
                self.state = 149
                self.expression(13)
                pass

            elif la_ == 4:
                self.state = 151
                self.value(0)
                self.state = 152
                self.assignOperator()
                self.state = 153
                self.expression(7)
                pass

            elif la_ == 5:
                self.state = 155
                self.value(0)
                self.state = 156
                self.match(CssGramatykaParser.LeftRound)
                self.state = 158
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 35322014400512) != 0):
                    self.state = 157
                    self.expression(0)


                self.state = 160
                self.match(CssGramatykaParser.RightRound)
                pass

            elif la_ == 6:
                self.state = 162
                self.value(0)
                pass

            elif la_ == 7:
                self.state = 163
                self.match(CssGramatykaParser.CharLiteral)
                pass

            elif la_ == 8:
                self.state = 164
                self.match(CssGramatykaParser.StringLiteral)
                pass

            elif la_ == 9:
                self.state = 165
                self.match(CssGramatykaParser.IntLiteral)
                pass

            elif la_ == 10:
                self.state = 166
                self.match(CssGramatykaParser.FloatLiteral)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 186
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,22,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 184
